--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
                 <p>O Burger King usa uma série de estratégias de franquia, incluindo confiar em certas franquias regionais para assinar novos franqueados em nome da empresa. No final de 2017, o Burger King informou que tinha 15.738 pontos de venda em 100 países, dos quais 7.156 estão nos Estados Unidos. Cerca de 99,5% das localidades globais são de propriedade e operação privadas, sendo a Burger King adotou um modelo quase totalmente franqueado em 2013</p>
             </article>
         </main>
+        <footer><b>Desenvolvido por Santiago R</b></footer>
     </div>
     
 </body>
